--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1953,4 +1953,10 @@ a.follow-rss:hover {
 	color:@brand-primary;
 }
 
+.btn-external-link {
+    padding-bottom: 0;
+    font-size: 10px;
+    margin: -3px 0px 0 5px;
+}
+
 //end
