Social Media Bar and Logo Oxford
- New Style for Footer (with social icons)
- Social Media Icons in the stage
- Social Icons for membersmembers-html

--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -2,51 +2,46 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12 text-center">
+				<div class="col-sm-9 col-xs-12 text-center">
 					<h3 class="footer-head">OUR HOSTS</h3>
 					<hr class="footer-hr">
 				</div>
+                <div class="col-sm-3 col-xs-12 text-center">
+                    <h3 class="footer-head">FOLLOW US</h3>
+                    <hr class="footer-hr">
+                </div>
 			</div>
+
 			<div class="row text-center .extra-spacing-bottom">
-				<div class="col-sm-4 col-xs-12">
+				<div class="col-sm-3 col-xs-12">
 					<a href="www.uzh.ch"><img class="sponsor-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3 col-xs-12">
                     <a href="www.uibk.ac.at"><img class="sponsor-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3 col-xs-12">
                     <a href="www.ox.ac.uk"><img class="sponsor-thumbnail" src="img/logo_uni_oxford.png"></a>
 				</div>
-			</div>
 
-            <!-- Social Media Bar -->
-            <div class="row">
-				<div class="col-lg-12 text-center">
-					<h3 class="footer-head">FOLLOW US</h3>
-					<hr class="footer-hr">
-				</div>
-			</div>
-            <div class="share-button sharer" style="display: block;">
-                <div class="social top center networks-5 ">
-                    <!-- Facebook Share Button -->
-                    <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
+                <!-- Social Media Bar -->
+                <div class="share-button sharer" style="display: block;">
+                    <div class="social top center networks-5 ">
+                        <!-- Facebook Share Button -->
+                        <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
 
-                    <!-- Google Plus Share Button -->
-                    <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
+                        <!-- Google Plus Share Button -->
+                        <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
 
-                    <!-- Twitter Share Button -->
-                    <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
+                        <!-- Twitter Share Button -->
+                        <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
 
-                    <!-- RSS Share Button -->
-                    <a class="follow-rss" href="#"><i class="fa some fa-rss"></i></a>
+                        <!-- RSS Share Button -->
+                        <a class="follow-rss" href="#"><i class="fa some fa-rss"></i></a>
 
-                    <!-- Pinterest Share Button -->
-                    <!-- <a class="fbtn share pinterest" href="http://pinterest.com/pin/create/button/?url=url&amp;description=data&amp;media=image"><i class="fa fa-pinterest"></i></a> -->
-
-                    <!-- LinkedIn Share Button -->
-                    <!-- <a class="fbtn share linkedin" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=url&amp;title=title&amp;source=url/"><i class="fa fa-linkedin"></i></a> -->
+                    </div>
                 </div>
             </div>
+
 
             <!-- <div class="row text-center">
                 <div class="col-sm-4">
