--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -428,6 +428,10 @@ textarea {
         color: @brand-primary;
 }
 
+.btn-joinus {
+    margin: 0 30px 2px;
+}
+
 // Global Section Styles
 
 
@@ -1890,9 +1894,20 @@ ul.list-inline.quicklinks {
 // Social Media Bar
 
 .some {
+    padding-right: 15px;
+    padding-left: 15px;
+    font-size: 30px;
+}
+
+.some-header {
     padding-right: 12px;
     padding-left: 12px;
     font-size: 20px;
+}
+
+.some-members {
+    padding-right: 12px;
+    font-size: 18px;
 }
 
 a.follow-facebook:hover {
@@ -1905,6 +1920,18 @@ a.follow-twitter:hover {
 
 a.follow-rss:hover {
 	color: #fa9b39;
+}
+
+a.follow-blog:hover {
+	color: darken(@brand-primary, 10%);
+}
+
+a.follow-website:hover {
+	color: darken(@brand-primary, 10%);
+}
+
+a.follow-linkedin:hover {
+	color: #3889c9;
 }
 
 //adding to work with contact template
