--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -6,9 +6,20 @@
 	            <h1><strong>Open Strategy</strong> Network <br>WELCOME!</h1>
 	            <hr>
 	            <h2>OSN is an international network of scholars interested in studying open strategy, i.e. more inclusive and transparent forms of strategizing. Coordinated by the University of Zurich, Saïd Business School and the University of Innsbruck, OSN investigates new forms of strategizing such as blogging, jamming and crowd-sourcing. Join the network and contribute to the OSN development!<a class="textlink" href="{{pathFor route='aboutUs'}}">Read more</a></h2>
-	            <button type="button" class="btn btn-primary btn-xl page-scroll js-join">JOIN US</button>
-	        </div>
-	    </div>
+                <div class="share-button sharer" style="display: block;">
+                    <div class="social top center networks-5 ">
+                        <button type="button" class="btn btn-primary btn-xl page-scroll js-join btn-joinus">JOIN US</button>                 <!-- Social Media Bar -->
+                        FOLLOW US:
+                        <!-- Facebook Share Button -->
+                        <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some-header fa-facebook-official"></i></a>
+                        <!-- Twitter Share Button -->
+                        <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some-header fa-twitter"></i></a>
+                        <!-- RSS Share Button -->
+                        <a class="follow-rss" href="#"><i class="fa some-header fa-rss"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</header> <!-- ./Stage -->
 
    <!-- News&Events -->
