Polish Breadcrumb at article site and form at Join us
- Polish Breadcrumb
- joinus-Form margin smaller
- social-Button-Font bigger

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -154,27 +154,27 @@ a.breadcrumb-link:hover {
 // Breadcrumb ohne Header
 
 .breadcrumb-content {
-		margin-top: 66px;
+		margin-top: 93px!important;
 		margin-bottom: 0;
-		font-size: 12px;
-		// background: @gray-lighter;
+		font-size: 12px!important;
+		background: @gray-lighter;
         border-top: 1px @brand-primary;
 		padding: 8px 15px;
 		list-style: none;
 }
 
 a.breadcrumb-content-link {
-        font-size: 12px;
+        font-size: 12px!important;
         color: @brand-primary-light;
 }
 
 a.breadcrumb-content-link:link {
-        font-size: 12px;
+        font-size: 12px!important;
         color: @brand-primary-light;
 }
 
 a.breadcrumb-content-link:hover {
-		font-size: 12px;
+		font-size: 12px!important;
 		color: @brand-primary;
 }
 
@@ -1037,6 +1037,7 @@ header .header-bibliography .header-bibliography-inner p {
 	}
 }
 
+
 // Header Content
 
 header {
@@ -1484,6 +1485,9 @@ section.layer-login {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		margin: 0;
+        font-size: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
 }
 
 
@@ -1986,4 +1990,7 @@ a.follow-linkedin:hover {
     margin: -3px 0px 0 5px;
 }
 
+.at-form {
+    margin: -20px 0 0 0;
+}
 //end
