correction with login

--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -97,7 +97,7 @@
                               </div>
 
                               <form>
-                                    <button type="submit" class="btn btn-primary btn-block">LOG IN</button>
+                                    <a href="{{pathFor route='joinUs'}}" class="btn btn-primary btn-block">REGISTER</a>
                               </form>
                             <!-- <li><p class="profile-username">Hello {{currentUser.profile.firstName}}</p></li>
                             <li role="separator" class="divider"></li>
