Hide admin links if not admin
Default user roles when inserting users manually or signing up are
defined in settings.json (public.users.roles.default). Setting it to the
same value as public.users.roles.admin will declare everyone as admin.

--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -119,9 +119,11 @@
                           <li><p class="profile-username">Hello {{currentUser.profile.firstName}}</p></li>
                           <li role="separator" class="divider"></li>
                           <li><a class="profile-links icon settings" href="{{pathFor route = 'profileSettings'}}">Settings</a></li>
+                          {{#if isInRole adminUserRole}}
                           <li><a class="profile-links icon news" href="{{pathFor route = 'adminNewsEventsList'}}">News &amp; Events</a></li>
                           <li><a class="profile-links icon publications" href="{{pathFor route = 'adminPublicationsList'}}">Publications</a></li>
                           <li><a class="profile-links icon members" href="{{pathFor route = 'adminMembersList'}}">Members</a></li>
+                          {{/if}}
 
                         {{#if isInRole 'admin'}}
                         <!-- <li>
