--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -1,46 +1,40 @@
 <template name="footer">
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-9 col-xs-12 text-center">
-					<h3 class="footer-head">OUR HOSTS</h3>
-					<hr class="footer-hr">
-				</div>
-                <div class="col-sm-3 col-xs-12 text-center">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-xs-12">
+                    <div class="text-center">
+                    <h3 class="footer-head">OUR HOSTS</h3>
+                    <hr class="footer-hr">
+                    </div>
+                    <div class="footer-hosts">
+                        <a href="www.uzh.ch"><img class="hosts-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
+                        <a href="www.uibk.ac.at"><img class="hosts-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
+                        <a href="www.ox.ac.uk"><img class="hosts-thumbnail" src="img/logo_uni_oxford.png"></a>
+                    </div>
+                </div>
+                <div class="col-sm-4 col-xs-12 text-center">
                     <h3 class="footer-head">FOLLOW US</h3>
                     <hr class="footer-hr">
-                </div>
-			</div>
+                    <!-- Social Media Bar -->
+                    <div class="share-button sharer" style="display: block;">
+                        <div class="social top center networks-5 ">
+                            <!-- Facebook Share Button -->
+                            <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
 
-			<div class="row text-center .extra-spacing-bottom">
-				<div class="col-sm-3 col-xs-12">
-					<a href="www.uzh.ch"><img class="sponsor-thumbnail" src="img/logo_uni_zuerich.png" alt="University of Zurich"></a>
-				</div>
-				<div class="col-sm-3 col-xs-12">
-                    <a href="www.uibk.ac.at"><img class="sponsor-thumbnail-innsbruck" src="img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
-				</div>
-				<div class="col-sm-3 col-xs-12">
-                    <a href="www.ox.ac.uk"><img class="sponsor-thumbnail" src="img/logo_uni_oxford.png"></a>
-				</div>
+                            <!-- Google Plus Share Button -->
+                            <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
 
-                <!-- Social Media Bar -->
-                <div class="share-button sharer" style="display: block;">
-                    <div class="social top center networks-5 ">
-                        <!-- Facebook Share Button -->
-                        <a class="follow-facebook" href="https://www.facebook.com/sharer/sharer.php?u=url"><i class="fa some fa-facebook-official"></i></a>
+                            <!-- Twitter Share Button -->
+                            <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
 
-                        <!-- Google Plus Share Button -->
-                        <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
-
-                        <!-- Twitter Share Button -->
-                        <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
-
-                        <!-- RSS Share Button -->
-                        <a class="follow-rss" href="#"><i class="fa some fa-rss"></i></a>
-
+                            <!-- RSS Share Button -->
+                            <a class="follow-rss" href="#"><i class="fa some fa-rss"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
+
 
 
             <!-- <div class="row text-center">
@@ -56,7 +50,7 @@
             </div> -->
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-6 text-right col-sm-12">
-                    <ul class="list-inline quicklinks">
+                    <ul class="list-inline quicklinks copyright">
                         <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#">webgstlt</a></span> </li>
                         <!-- <li><a class="footer-link" href="imprint.html">Imprint</a></li> -->
 <!--                     <li><a href="#">Terms of Use</a></li> -->
