Change subscribe button design small

--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -239,8 +239,8 @@
           </form>
           {{/with}}
           <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 extra-spacing-bottom">
-              <div style="float:left;">
+            <div class="col-sm-8 col-sm-offset-2 extra-spacing-bottom">
+              <div style="text:left;">
                 {{#if subscribed}}
                 You are <b>subscribed</b> to our mail newsletter
                 <button id="unsubscribe" type="click" class="btn btn-primary btn-newsletter">UNSUBSCRIBE</button>
