--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -2035,4 +2035,12 @@ a.follow-linkedin:hover {
 .btn-newsletter {
     margin-left: 8px;
 }
+
+@media (max-width: 420px) {
+    .btn-newsletter {
+        margin-left: 0;
+        margin-top: 15px;
+        margin-right: 15px;
+    }
+}
 //end
